--- a/app/views/irm/business_objects/_edit_form.html.erb
+++ b/app/views/irm/business_objects/_edit_form.html.erb
@@ -4,7 +4,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_business_object_edit)%>:<%= @business_object[:name]%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_business_object_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
@@ -15,6 +15,7 @@
   </div>
   <div class="pbBody">
     <%= error_for @business_object %>
+    <%= f.hidden_field(:auto_generate_flag) %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
@@ -28,53 +29,95 @@
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <% if @business_object.auto_generate_flag.eql?(Irm::Constant::SYS_YES)%>
-           <tbody>
+        <tbody>
             <tr>
-              <td class="labelCol"><label for="business_object_business_object_code"><%=t(:label_irm_business_object_business_object_code)%></label></td>
-              <td class="dataCol"><%=@business_object.business_object_code%></td>
               <td class="labelCol"><label for="business_object_name"><%=t(:label_irm_business_object_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"business_object_name"%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label for="business_object_table_name"><%=t(:label_irm_business_object_bo_table_name)%></label></td>
-              <td class="dataCol"><%=@business_object.bo_table_name%></td>
-              <td class="labelCol"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
-              <td class="dataCol"><%=@business_object.bo_model_name%></td>
+              <td class="labelCol"><label for="business_object_description"><%=t(:label_irm_business_object_description)%></label></td>
+              <td class="dataCol" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"business_object_description"%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_standard_flag"><%=t(:label_irm_business_object_standard_flag)%></label></td>
+              <td class="dataCol"><%=check_img(@business_object.standard_flag)%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label for="business_object_multilingual_flag"><%=t(:label_irm_business_object_multilingual_flag)%></label></td>
               <td class="dataCol"><%=check_img(@business_object.multilingual_flag)%></td>
-              <td class="labelCol"><label for="business_object_workflow_flag"><%=t(:label_irm_business_object_workflow_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:workflow_flag,:id=>"business_object_workflow_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_auto_generate_flag"><%=t(:label_irm_business_object_auto_generate_flag)%></label></td>
+              <td class="dataCol"><%=check_img(@business_object.auto_generate_flag)%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
            </tbody>
-        <% else %>
-            <tbody>
-             <tr>
-               <td class="labelCol"><label for="business_object_business_object_code"><%=t(:label_irm_business_object_business_object_code)%></label></td>
-               <td class="dataCol"><%=@business_object.business_object_code%></td>
-               <td class="labelCol"><label for="business_object_name"><%=t(:label_irm_business_object_name)%></label></td>
-               <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"business_object_name"%></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label for="business_object_table_name"><%=t(:label_irm_business_object_bo_table_name)%></label></td>
-               <td class="dataCol"><%=@business_object.bo_table_name%></td>
-               <td class="labelCol"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
-               <td class="dataCol"><%=@business_object.bo_model_name%></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label for="business_object_multilingual_flag"><%=t(:label_irm_business_object_multilingual_flag)%></label></td>
-               <td class="dataCol"><%=f.check_box :multilingual_flag ,:id=>"business_object_multilingual_flag"%></td>
-               <td class="labelCol empty">&nbsp;</td>
-               <td class="dataCol empty">&nbsp;</td>
-             </tr>
-            </tbody>
-
-        <% end  %>
       </table>
     </div>
+
+    <div class="pbSubheader  tertiaryPalette">
+      <h3><%= t(:label_irm_business_object_api) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label for="business_object_business_object_code"><%=t(:label_irm_business_object_business_object_code)%></label></td>
+              <td class="dataCol"><%= @business_object.business_object_code  %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
+              <td class="dataCol"><%= @business_object.bo_model_name  %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_table_name"><%=t(:label_irm_business_object_bo_table_name)%></label></td>
+              <td class="dataCol"><%= @business_object.bo_table_name  %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+
+        </tbody>
+      </table>
+    </div>
+
+
+    <div class="pbSubheader  tertiaryPalette">
+      <h3><%= t(:label_irm_business_object_function) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+
+            <tr>
+              <td class="labelCol"><label for="business_object_workflow_flag"><%=t(:label_irm_business_object_workflow_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:workflow_flag,:id=>"business_object_workflow_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_report_flag"><%=t(:label_irm_business_object_report_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:report_flag,:id=>"business_object_report_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+           </tbody>
+      </table>
+    </div>
+
   </div>
+
+
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
