--- a/app/views/irm/business_objects/_new_form.html.erb
+++ b/app/views/irm/business_objects/_new_form.html.erb
@@ -37,14 +37,53 @@
               <td class="dataCol empty"><%=f.hidden_field :business_object_code%></td>
             </tr>
             <tr>
+              <td class="labelCol"><label for="business_object_description"><%=t(:label_irm_business_object_description)%></label></td>
+              <td class="dataCol" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"business_object_description"%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_standard_flag"><%=t(:label_irm_business_object_standard_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:standard_flag,:id=>"business_object__standard_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+           </tbody>
+      </table>
+    </div>
+
+    <div class="pbSubheader  tertiaryPalette">
+      <h3><%= t(:label_irm_business_object_api) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+
+            <tr>
               <td class="labelCol"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:bo_model_name,available_not_exists_model) %></td>
+              <td class="dataCol"><%= f.blank_select(:bo_model_name,available_not_exists_model,{},:required=>true) %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty"><%=f.hidden_field :bo_table_name%></td>
             </tr>
+           </tbody>
+      </table>
+    </div>
+
+
+    <div class="pbSubheader  tertiaryPalette">
+      <h3><%= t(:label_irm_business_object_function) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+
             <tr>
               <td class="labelCol"><label for="business_object_workflow_flag"><%=t(:label_irm_business_object_workflow_flag)%></label></td>
               <td class="dataCol"><%=f.check_box(:workflow_flag,:id=>"business_object_workflow_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_report_flag"><%=t(:label_irm_business_object_report_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:report_flag,:id=>"business_object_report_flag")%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
@@ -57,6 +96,7 @@
            </tbody>
       </table>
     </div>
+
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
