--- a/app/views/irm/object_attributes/new_model_attribute.html.erb
+++ b/app/views/irm/object_attributes/new_model_attribute.html.erb
@@ -1,10 +1,11 @@
-<%= form_for(@object_attribute,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= common_title(:action_meaning=>t(:label_irm_object_attribute_new_model_attribute)) %>
+<%= form_for(@object_attribute,:url=>{:action=>"create_model_attribute"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_application_new)%></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_object_attribute_new_model_attribute)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_to t(:save), {},{:type=>"submit"} %></div>
             <div class="button"><%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"} %></div>
@@ -29,27 +30,26 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <tr>
-              <td class="labelCol"><label for="object_attribute_name"><%=t(:label_irm_object_attribute_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"object_attribute_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="object_attribute_attribute_name"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
-              <td class="dataCol"><%=@object_attribute.attribute_name%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="object_attribute_description"><%=t(:label_irm_object_attribute_description)%></label></td>
-              <td class="dataCol" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"object_attribute_description"%></td>
-            </tr>
+          <tr>
+            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_name)%></label></td>
+            <td class="dataCol">
+              <%=f.text_field :name, {:required=>true}%>
+              <%= f.hidden_field(:business_object_id) %>
+              <%= f.hidden_field(:attribute_type) %>
+              <%= f.hidden_field(:field_type) %>
+            </td>
+            <td class="labelCol empty">&nbsp;</td>
+            <td class="dataCol empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
+            <td class="dataCol"><%=f.text_field :attribute_name, {:required=>true}%></td>
+            <td class="labelCol empty">&nbsp;</td>
+            <td class="dataCol empty">&nbsp;</td>
+          </tr>
         </tbody>
-
       </table>
     </div>
-
     <div class="pbSubheader  tertiaryPalette">
       <h3><%= t(:label_irm_object_attribute_function) %></h3>
     </div>
@@ -81,3 +81,4 @@
   </div>
 </div>
 <% end %>
+
